--- a/_sass/pages/_post.scss
+++ b/_sass/pages/_post.scss
@@ -17,6 +17,7 @@
     padding: 50px 40px 0 350px;
     top: 0;
     z-index: 0;
+    -webkit-transform: translateZ(0px);
   }
 }
 
